--- a/www/index.html
+++ b/www/index.html
@@ -37,11 +37,56 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
+			</br>
+			</br>
+			<a href="" onclick="FacebookShare();">
+				FIRST FACEBOOK TEST
+			</a>
+			</br>
+			</br>
+			<a href="" onclick="FacebookShareTwo();">
+				Second FACEBOOK TEST
+			</a>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
+		<script type="text/javascript">
+			window.fbAsyncInit = function() {
+		    	FB.init({
+		      		appId      : '938723009498034',
+		      		xfbml      : true,
+		      		version    : 'v2.5'
+		    	});
+		  	};
+			
+			(function(d, s, id){
+		     	var js, fjs = d.getElementsByTagName(s)[0];
+		     	if (d.getElementById(id)) {return;}
+		     	js = d.createElement(s); js.id = id;
+		     	js.src = "//connect.facebook.net/en_US/sdk.js";
+		     	fjs.parentNode.insertBefore(js, fjs);
+		   	}(document, 'script', 'facebook-jssdk'));
+		</script>
+		<script type="text/javascript">
+			function FacebookShare() {
+				FB.ui({
+				  method: 'share',
+				  href: 'http://local-storm-779.appspot.com'
+				}, function(response){});
+			}
+			
+			function FacebookShareTwo() {
+				facebookConnectPlugin.showDialog( 
+				    {
+						method: 'share',
+						href: 'http://local-storm-779.appspot.com'
+				    }, 
+				    function (response) { alert(JSON.stringify(response)) },
+				    function (response) { alert(JSON.stringify(response)) });
+			}
+		</script>
     </body>
 </html>
