--- a/www/index.html
+++ b/www/index.html
@@ -79,10 +79,10 @@
 			}
 			
 			function FacebookShareTwo() {
-				/*var connected = "false";
-				console.log("Before Get Login Status")
-				console.log("Connect: " + connected)
-				facebookConnectPlugin.getLoginStatus( function(response) {
+				var connected = "false";
+				alert("Before Get Login Status");
+				alert("Connect: " + connected);
+				/*facebookConnectPlugin.getLoginStatus( function(response) {
 					if (response.status === 'connected') {
 						connected="true";
 				  	} else if (response.status === 'not_authorized') {
