--- a/www/index.html
+++ b/www/index.html
@@ -82,23 +82,26 @@
 				var connected = "false";
 				alert("Before Get Login Status");
 				alert("Connect: " + connected);
-				/*facebookConnectPlugin.getLoginStatus( function(response) {
+				facebookConnectPlugin.getLoginStatus( function(response) {
 					if (response.status === 'connected') {
+						alert("In Connected If Loop");
 						connected="true";
 				  	} else if (response.status === 'not_authorized') {
+						alert("In Not Authorized If Loop");
 						facebookConnectPlugin.login(facebookConnectPlugin.login(["public_profile"],
 						    connected="true",
 						    function (error) { alert("" + error) }
 						);
 				  	} else {
+						alert("In Last If Loop");
 				    	facebookConnectPlugin.login(facebookConnectPlugin.login(["public_profile"],
 						    connected="true",
 						    function (error) { alert("" + error) }
 						);
 				  	}
 				});
-				console.log("Past Get Login Status")
-				console.log("Connect: " + connected)
+				alert("Past Get Login Status");
+				alert("Connect: " + connected);
 				if (connected="true") {*/
 					facebookConnectPlugin.showDialog( {
 						method: 'share',
@@ -107,9 +110,9 @@
 				    	function (response) { alert(JSON.stringify(response)) },
 				    	function (response) { alert(JSON.stringify(response)) }
 					);
-				/*}
-				console.log("Done Get Login Status")
-				console.log("Connect: " + connected)*/
+				}
+				alert("Done Get Login Status");
+				alert("Connect: " + connected);
 			}
 		</script>
     </body>
