--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@
 				var connected = "false";
 				alert("Before Get Login Status");
 				alert("Connect: " + connected);
-				facebookConnectPlugin.getLoginStatus( function(response) {
+				/*facebookConnectPlugin.getLoginStatus( function(response) {
 					if (response.status === 'connected') {
 						alert("In Connected If Loop");
 						connected="true";
@@ -99,7 +99,7 @@
 						    function (error) { alert("" + error) }
 						);
 				  	}
-				});
+				});*/
 				alert("Past Get Login Status");
 				alert("Connect: " + connected);
 				if (connected="true") {*/
