--- a/www/index.html
+++ b/www/index.html
@@ -83,15 +83,16 @@
 				alert("Before Get Login Status");
 				alert("Connect: " + connected);
 				facebookConnectPlugin.getLoginStatus(function(response) {
-				  if (response.status === 'connected') {
-				    var uid = response.authResponse.userID;
-				    var accessToken = response.authResponse.accessToken;
-					alert("Connected: " + response.status);
-				  } else if (response.status === 'not_authorized') {
-				    alert("Not Authorized:"+ response.status);
-				  } else {
-				    alert("Other: "+ response.status);
-				  }
+					if (response.status === 'connected') {
+				    	var uid = response.authResponse.userID;
+				    	var accessToken = response.authResponse.accessToken;
+						alert("Connected: " + response.status);
+				  	} else if (response.status === 'not_authorized') {
+				    	alert("Not Authorized:"+ response.status);
+				  	} else {
+				    	alert("Other: "+ response.status);
+						facebookConnectPlugin.login(["public_profile"], alert("Succesful Logging In: " + response.status), alert("Unsuccesful Logging In: " + response.status));
+				  	}
 				 });
 				/*facebookConnectPlugin.getLoginStatus( function(response) {
 					if (response.status === 'connected') {
